--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm ci
 
       - name: Run tests for ${{ matrix.browser }}
-        run: npm run test:${{ matrix.browser }}
+        run: npm run ${{ matrix.browser }}
 
       - name: Generate Allure report
         run: |
