--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@wdio/cli": "^9.16.2",
     "@wdio/local-runner": "^9.16.2",
     "@wdio/mocha-framework": "^9.16.2",
+    "@wdio/selenium-standalone-service": "^8.14.0",
     "@wdio/spec-reporter": "^9.16.2",
     "allure-commandline": "^2.34.1",
     "cross-env": "^7.0.3"
