--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,67 +1,44 @@
-name: WebdriverIO Tests
+name: Run WebdriverIO Tests and Publish Allure Report
 
 on:
   push:
     branches: [main]
 
 jobs:
-  test:
+  test-and-report:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         browser: [chrome, firefox]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: ⬇️ Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: 🟢 Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 18
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies
         run: npm ci
 
-      - name: Run tests for ${{ matrix.browser }}
-        run: npm run ${{ matrix.browser }}
-
-      - name: Generate Allure report
+      - name: 🧪 Run WebdriverIO tests in ${{ matrix.browser }}
         run: |
-          npm run allure:generate
-          mkdir -p artifacts
-          zip -r artifacts/allure-report-${{ matrix.browser }}.zip allure-report
+          if [ "${{ matrix.browser }}" = "chrome" ]; then
+            npm run test:chrome
+          elif [ "${{ matrix.browser }}" = "firefox" ]; then
+            npm run test:firefox
+          fi
 
-      - name: Upload Allure ZIP artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-report-${{ matrix.browser }}
-          path: artifacts/allure-report-${{ matrix.browser }}.zip
+      - name: 🧰 Generate Allure HTML report
+        run: |
+          npm install -g allure-commandline --save-dev
+          allure generate allure-results --clean -o allure-report
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests (Chrome only for Pages)
-        run: npm run test:chrome
-
-      - name: Generate Allure report
-        run: npm run allure:generate
-
-      - name: Deploy Allure report to GitHub Pages
+      - name: 🚀 Deploy Allure report to GitHub Pages
+        if: matrix.browser == 'chrome'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
