--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,45 +1,35 @@
-name: Run WebdriverIO Tests and Publish Allure Report
+name: WebdriverIO Tests
 
 on:
   push:
     branches: [main]
 
 jobs:
-  test-and-report:
+  test:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        browser: [chrome, firefox]
-
     steps:
-      - name: ⬇️ Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: 🟢 Set up Node.js
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: 📦 Install dependencies
+      - name: Install dependencies
         run: npm ci
 
-      - name: 🧪 Run WebdriverIO tests in ${{ matrix.browser }}
-        run: |
-          if [ "${{ matrix.browser }}" = "chrome" ]; then
-            npm run test:chrome
-          elif [ "${{ matrix.browser }}" = "firefox" ]; then
-            npm run test:firefox
-          fi
+      - name: Run Tests
+        run: npm run test:chrome
 
-      - name: 🧰 Generate Allure HTML report
+      - name: Generate Allure Report
         run: |
-          npm install -g allure-commandline --save-dev
-          allure generate allure-results --clean -o allure-report
+          npm run allure:report
+          mkdir -p public
+          cp -r allure-report/* public/
 
-      - name: 🚀 Deploy Allure report to GitHub Pages
-        if: matrix.browser == 'chrome'
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./allure-report
+          publish_dir: ./public
