--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "wdio run wdio.conf.js",
     "test:chrome": "wdio run wdio.chrome.conf.js",
     "test:firefox": "wdio run wdio.firefox.conf.js",
-    "allure:generate": "allure generate allure-results --clean -o allure-report",
+    "allure:report": "allure generate allure-results --clean -o allure-report",
     "allure:open": "allure open allure-report"
   }
 }
